# QML-Beginners

./: gitignore
Section-1/3_RunningQML/: CMakeLists.txt  main.cpp
Section-1/4-QtQuickPrototype/: 4-QtQuickPrototype.qml
Section-2/1_BasicQMLSyntax/: CMakeLists.txt  main.cpp
Section-2/3_ExploringDataTypes/: CMakeLists.txt  Main.qml
Section-2/4_PropertyBinding/: CMakeLists.txt  Main.qml
Section-2/5_QtGlobalObject/: CMakeLists.txt  Main.qml
Section-2/6_PropertyChangeHandlers/: CMakeLists.txt  main.cpp
Section-3/1_RectangleItemText/: CMakeLists.txt  Main.qml
Section-3/2_Image/: CMakeLists.txt  Main.qml  resource.qrc
Section-3/3_qt_add_resource/: CMakeLists.txt  Main.qml  main.cpp
Section-4/1_CustomComponents/: CMakeLists.txt  MButton.qml  Main.qml
Section-4/2_CustomComponentInPlace/: CMakeLists.txt  Main.qml  main.cpp
